--- a/src/page/_components/hoo-content/_components/modal-order/index.scss
+++ b/src/page/_components/hoo-content/_components/modal-order/index.scss
@@ -34,7 +34,40 @@
       outline: none;
     }
   }
-
+  &__lds_ring {
+    display: inline-block;
+    position: relative;
+    width: 30px;
+    height: 30px;
+  }
+  &__lds_ring div {
+    box-sizing: border-box;
+    display: block;
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    border: 3px solid #fff;
+    border-radius: 50%;
+    animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    border-color: #fff transparent transparent transparent;
+  }
+  &__lds_ring div:nth-child(1) {
+    animation-delay: -0.45s;
+  }
+  &__lds_ring div:nth-child(2) {
+    animation-delay: -0.3s;
+  }
+  &__lds_ring div:nth-child(3) {
+    animation-delay: -0.15s;
+  }
+  @keyframes lds-ring {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
   &__content-order-form {
     display: flex;
   }
