--- a/src/page/_components/hoo-header/index.scss
+++ b/src/page/_components/hoo-header/index.scss
@@ -38,12 +38,9 @@
     padding-right: 42px;
   }
 
-  &__instagram {
-    margin-right: 20px;
-    cursor: pointer;
-  }
-
+  &__instagram,
   &__vk {
+    margin-right: 20px;
     cursor: pointer;
   }
 
