--- a/src/page/_components/hoo-content/_components/footer/index.scss
+++ b/src/page/_components/hoo-content/_components/footer/index.scss
@@ -22,3 +22,11 @@
     cursor: pointer;
   }
 }
+
+@media (max-width: 720px) {
+  .Footer {
+    &__logo {
+      padding-right: 8px;
+    }
+  }
+}
