--- a/src/page/_components/hoo-content/_components/reviews/index.scss
+++ b/src/page/_components/hoo-content/_components/reviews/index.scss
@@ -116,3 +116,11 @@
 .Reviews__carousel .slick-next::before {
   display: none;
 }
+
+@media (max-width: 1325px) {
+  .Reviews {
+    &__wrapper {
+      padding: 12px 12px 150px 12px;
+    }
+  }
+}
