--- a/src/page/_components/hoo-content/index.scss
+++ b/src/page/_components/hoo-content/index.scss
@@ -5,7 +5,7 @@
   align-items: flex-end;
   justify-content: space-evenly;
   &__wrapper {
-    position: static;
+    position: relative;
     padding-bottom: 370px;
   }
 
@@ -18,6 +18,7 @@
   &__title {
     padding-bottom: 32px;
   }
+
   &__button-calculator-link {
     text-decoration: none;
   }
@@ -87,5 +88,60 @@
     display: flex;
     align-items: center;
     background: $Black;
+  }
+}
+
+@media (max-width: 1600px) {
+  .HooContent {
+    &__right-smoke {
+      display: none;
+    }
+  }
+}
+@media (max-width: 1496px) {
+  .HooContent {
+    &__left-smoke {
+      display: none;
+    }
+    &__title-wrapper {
+      padding: 80px 0 0 16px;
+    }
+  }
+}
+
+@media (max-width: 1018px) {
+  .HooContent {
+    &__right-smoke-bottom {
+      display: none;
+    }
+    &__wrapper {
+      padding-bottom: 120px;
+    }
+    &__right-image {
+      display: none;
+    }
+    &__title-wrapper {
+      max-width: unset;
+      padding: 80px 40px 0 40px;
+    }
+  }
+}
+
+@media (max-width: 630px) {
+  .HooContent {
+    &__buttons-wrapper {
+      flex-direction: column;
+    }
+    &__button-order-wrapper {
+      padding-right: 0;
+      padding-bottom: 12px;
+    }
+    &__button-order {
+      width: 100%;
+    }
+    &__button-check-price-wrapper {
+      display: flex;
+      justify-content: center;
+    }
   }
 }
